engine/: drop DConfChangesetList

It's really just a GQueue...

https://bugzilla.gnome.org/show_bug.cgi?id=685316